# cauterize

./: .travis.yml  LICENSE  Makefile  README.md  caut2c.hs  caut2c11.hs  cauterize-core.cabal  cauterize.cabal  cauterize_drift_detection.md  duplicateName.scm  dynamic.txt  loop.scm  main.hs  ref-caut.cabal  schema.scm  stack.yaml  test.hs
Cauterize/: FormHash.hs  Options.hs  Schema.hs  Specification.hs
Cauterize/Common/: BuiltIn.hs  Field.hs  IndexedRef.hs  Named.hs  ParserUtils.hs  Primitives.hs  References.hs  Types.hs
Cauterize/Common/Types/: BoundedArray.hs  BuiltIn.hs  Const.hs  Enum.hs  FixedArray.hs  Pad.hs  Partial.hs  Scalar.hs  Set.hs  Struct.hs
Cauterize/Schema/: Arbitrary.hs  Parser.hs  Types.hs  Utils.hs
Cauterize/Specification/: Parser.hs  Types.hs
caut2c11_templates/: libroot.tmpl.c  libroot.tmpl.h
caut2c11_templates/types/: bounded_body.tmpl.c  builtin_body.tmpl.c  const_body.tmpl.c  enum.tmpl.h  enum_body.tmpl.c  fixed_body.tmpl.c  pad_body.tmpl.c  partial_body.tmpl.c  scalar_body.tmpl.c  scalar_serializers.tmpl.c  set_body.tmpl.c  struct_body.tmpl.c
caut2c_templates/: libroot.tmpl.c  libroot.tmpl.h
cauterize-cmd/: Main.hs
cauterize-cmd/Cauterize/: Options.hs
cauterize-meta/: Main.hs
cauterize-meta/Cauterize/: Options.hs
cauterize-test/: Main.hs
cauterize-test/Cauterize/Test/: Crucible.hs  Generate.hs  Test.hs
cauterize-test/Cauterize/Test/Crucible/: Options.hs
cauterize-test/Cauterize/Test/Generate/: Options.hs
cauterize-test/Cauterize/Test/Test/: Options.hs
examples/: atomicObjectBathroomMonitor.scm  badName.scm  compiled_example-meta.txt  compiled_example-spec.txt  dupName.scm  empty.scm  loop.scm  reservedName.scm  schema.scm
src/Cauterize/: CommonTypes.hs  CommonTypesNew.hs  Dynamic.hs  FormHash.hs  Generate.hs  Hash.hs  HashNew.hs  Lexer.hs  Meta.hs  Schema.hs  Specification.hs  Version.hs
src/Cauterize/Common/: ParserUtils.hs  Types.hs
src/Cauterize/Dynamic/: Common.hs  Gen.hs  Meta.hs  Pack.hs  Pretty.hs  Types.hs  Unpack.hs
src/Cauterize/Dynamic/Meta/: Gen.hs  Pack.hs  Pretty.hs  Types.hs  Unpack.hs
src/Cauterize/Meta/: Parser.hs  Pretty.hs  Types.hs
src/Cauterize/Schema/: Arbitrary.hs  Checker.hs  CheckerNew.hs  Parser.hs  ParserNew.hs  Types.hs  TypesNew.hs  Util.hs  UtilNew.hs
src/Cauterize/Specification/: Compile.hs  Parser.hs  ParserNew.hs  Types.hs  TypesInternalNew.hs  TypesNew.hs
tests/: Main.hs  TestSupport.hs  test_schema.txt
tests/Cauterize/: CommonTypesSpec.hs  DynamicSpec.hs  GenerateSpec.hs  HashSpec.hs  SchemaSpec.hs  SpecificationSpec.hs
tests/Cauterize/Dynamic/: MetaSpec.hs  PackSpec.hs
tests/Cauterize/Schema/: ParserSpec.hs
tests/Cauterize/Specification/: CompileSpec.hs  ParserSpec.hs
tests/Suites/: Dynamic.hs  ParseSchema.hs
